<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <EditText
        android:id="@+id/Edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:hint="@string/number1"
        app:layout_constraintBottom_toTopOf="@+id/Edit2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/Edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/number2"
        app:layout_constraintBottom_toTopOf="@+id/BtnAdd"
        app:layout_constraintTop_toBottomOf="@+id/Edit1"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/BtnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="1dp"
        android:text="@string/Add"
        app:layout_constraintBottom_toTopOf="@+id/BtnMinus"
        app:layout_constraintTop_toBottomOf="@+id/Edit2"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/BtnMinus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Minus"
        app:layout_constraintBottom_toTopOf="@+id/BtnMultiple"
        app:layout_constraintTop_toBottomOf="@+id/BtnAdd"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/BtnMultiple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="206dp"
        android:text="@string/Multiple"
        app:layout_constraintBottom_toTopOf="@+id/BtnSplit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="9dp" />

    <Button
        android:id="@+id/BtnSplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Split"
        app:layout_constraintTop_toBottomOf="@+id/BtnMultiple"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/TextResult"
        android:layout_width="135dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginTop="13dp"
        android:text="@string/TextResult"
        android:textColor="#FF0000"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/BtnSplit"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>